--- a/store.html
+++ b/store.html
@@ -359,6 +359,7 @@
       /* Workshop Sections */
       .section {
         padding: 0;
+        margin-top: 70px;
       }
 
       .container {
@@ -1737,7 +1738,7 @@
           </div>
           <div
             class="gallery-item fade-in"
-            onclick="openLightbox('assets/images/img20.jpg')"
+            onclick="openLightbox('assets/images/img3.jpg')"
           >
             <img src="assets/images/img3.jpg" alt="Workshop Session" />
           </div>
@@ -1761,7 +1762,7 @@
           </div>
           <div
             class="gallery-item fade-in"
-            onclick="openLightbox('assets/images/img60.jpg')"
+            onclick="openLightbox('assets/images/img8.jpg')"
           >
             <img src="assets/images/img8.jpg" alt="Workshop Session" />
           </div>
