--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <link rel="stylesheet" href="assets/styles/style.css" />
     <link rel="stylesheet" href="assets/styles/utils.css" />
     <link rel="stylesheet" href="assets/styles/components/navhero.css" />
-    <link rel="stylesheet" href="assets/styles/components/gal.css" />
+    <link rel="stylesheet" href="assets/styles/components/gallery.css" />
     <link rel="stylesheet" href="assets/styles/components/footer.css" />
   </head>
   <body>
@@ -466,6 +466,6 @@
     </footer>
     <script src="assets/src/general.js"></script>
     <script src="assets/src/navhero.js"></script>
-    <script src="assets/src/gal.js"></script>
+    <script src="assets/src/gallery.js"></script>
   </body>
 </html>
