--- a/cl-port.html
+++ b/cl-port.html
@@ -153,7 +153,7 @@
         border-radius: 3px;
         border: 1px solid var(--border);
         width: 100%;
-        height: 350px;
+        height: 280px;
         cursor: pointer;
         transition: all var(--transition-normal);
         box-shadow: 0 4px 12px var(--shadow);
@@ -984,10 +984,21 @@
       // ===========================================
       // GALLERY FUNCTIONALITY
       // ===========================================
-      let currentImageIndex = 1;
-      const totalImages = 60;
+      // Gallery categories with image numbers
+      const galleryCategories = {
+        all: Array.from({ length: 60 }, (_, i) => i + 1), // All images from 1 to 60
+        portraits: [
+          1, 2, 5, 9, 10, 13, 17, 21, 25, 29, 33, 37, 41, 45, 49, 53, 57,
+        ],
+        weddings: [3, 6, 11, 14, 18, 22, 26, 30, 34, 38, 42, 46, 50, 54, 58],
+        events: [4, 7, 12, 15, 19, 23, 27, 31, 35, 39, 43, 47, 51, 55, 59],
+        others: [8, 16, 20, 24, 28, 32, 36, 40, 44, 48, 52, 56, 60],
+      };
+
+      let currentFilter = "all";
+      let currentImageCount = 0;
       const imagesPerLoad = 12;
-      let currentImageCount = 12;
+      const totalImages = 60;
 
       // Detect if device is touch-enabled
       const isTouchDevice = () => {
@@ -1002,36 +1013,69 @@
       // Initialize gallery
       function initializeGallery() {
         const galleryGrid = document.getElementById("galleryGrid");
-        for (let i = 1; i <= currentImageCount; i++) {
-          const galleryItem = createGalleryItem(i);
+        galleryGrid.innerHTML = ""; // Clear existing gallery items
+
+        // Get images for current filter
+        const currentCategoryImages = galleryCategories[currentFilter];
+
+        // Load initial images
+        const imagesToShow = Math.min(
+          imagesPerLoad,
+          currentCategoryImages.length
+        );
+        currentImageCount = imagesToShow;
+
+        for (let i = 0; i < imagesToShow; i++) {
+          const imageNumber = currentCategoryImages[i];
+          const galleryItem = createGalleryItem(imageNumber);
           galleryGrid.appendChild(galleryItem);
         }
+
+        // Update load more button state
+        updateLoadMoreButton();
       }
 
       // Create gallery item
       function createGalleryItem(imageNumber) {
         const item = document.createElement("div");
         item.className = "gallery-item fade-in";
+
+        // Find which category this image belongs to
+        let categoryName = "Image";
+        for (const [category, images] of Object.entries(galleryCategories)) {
+          if (category !== "all" && images.includes(imageNumber)) {
+            categoryName = category.charAt(0).toUpperCase() + category.slice(1);
+            break;
+          }
+        }
+
+        item.setAttribute("data-category", categoryName.toLowerCase());
         item.onclick = () => openLightbox(imageNumber);
+
         const img = document.createElement("img");
         img.src = `assets/images/img${imageNumber}.jpg`;
         img.alt = `Gallery Image ${imageNumber}`;
         img.className = "no-context-menu";
         img.draggable = false;
         img.oncontextmenu = () => false;
+
         const overlay = document.createElement("div");
         overlay.className = "gallery-overlay";
+
         const info = document.createElement("div");
         info.className = "gallery-info";
-        info.innerHTML = `<div class="gallery-number">Image ${imageNumber} of ${totalImages}</div>`;
+        info.innerHTML = `<div class="gallery-number">${categoryName} - Image ${imageNumber}</div>`;
+
         overlay.appendChild(info);
         item.appendChild(img);
         item.appendChild(overlay);
+
         setTimeout(() => {
           if (isElementInViewport(item)) {
             item.classList.add("visible");
           }
         }, 100);
+
         return item;
       }
 
@@ -1042,25 +1086,66 @@
         loadMoreBtn.disabled = true;
         loadMoreBtn.innerHTML =
           '<i class="fas fa-spinner fa-spin"></i> Loading...';
+
         setTimeout(() => {
+          // Get images for current filter
+          const currentCategoryImages = galleryCategories[currentFilter];
+
+          // Calculate how many more images to load
           const remainingImages = Math.min(
             imagesPerLoad,
-            totalImages - currentImageCount
+            currentCategoryImages.length - currentImageCount
           );
-          for (let i = 1; i <= remainingImages; i++) {
-            const imageNumber = currentImageCount + i;
+
+          // Add new images
+          for (let i = 0; i < remainingImages; i++) {
+            const imageNumber = currentCategoryImages[currentImageCount + i];
             const galleryItem = createGalleryItem(imageNumber);
             galleryGrid.appendChild(galleryItem);
           }
+
           currentImageCount += remainingImages;
-          if (currentImageCount >= totalImages) {
-            loadMoreBtn.innerHTML =
-              '<i class="fas fa-check"></i> All Images Loaded';
-          } else {
-            loadMoreBtn.disabled = false;
-            loadMoreBtn.innerHTML = '<i class="fas fa-plus"></i> View More';
-          }
+
+          // Update button state
+          updateLoadMoreButton();
         }, 800);
+      }
+
+      // Update load more button state
+      function updateLoadMoreButton() {
+        const loadMoreBtn = document.getElementById("loadMoreBtn");
+        const currentCategoryImages = galleryCategories[currentFilter];
+
+        if (currentImageCount >= currentCategoryImages.length) {
+          loadMoreBtn.innerHTML =
+            '<i class="fas fa-check"></i> All Images Loaded';
+          loadMoreBtn.disabled = true;
+        } else {
+          loadMoreBtn.disabled = false;
+          loadMoreBtn.innerHTML = '<i class="fas fa-plus"></i> View More';
+        }
+      }
+
+      // Initialize filter buttons
+      function initializeFilters() {
+        const filterButtons = document.querySelectorAll(".filter-btn");
+
+        filterButtons.forEach((button) => {
+          button.addEventListener("click", () => {
+            // Remove active class from all buttons
+            filterButtons.forEach((btn) => btn.classList.remove("active"));
+
+            // Add active class to clicked button
+            button.classList.add("active");
+
+            // Update current filter
+            currentFilter = button.getAttribute("data-filter");
+
+            // Reset image count and reload gallery
+            currentImageCount = 0;
+            initializeGallery();
+          });
+        });
       }
 
       // ===========================================
@@ -1070,6 +1155,7 @@
         const lightbox = document.getElementById("lightbox");
         const lightboxImage = document.getElementById("lightboxImage");
         const lightboxCounter = document.getElementById("lightboxCounter");
+
         currentImageIndex = imageNumber;
         lightboxImage.src = `assets/images/img${imageNumber}.jpg`;
         lightboxImage.alt = `Gallery Image ${imageNumber}`;
@@ -1831,6 +1917,7 @@
       document.addEventListener("DOMContentLoaded", function () {
         loadSavedTheme();
         initializeGallery();
+        initializeFilters();
         initScrollAnimations();
 
         document.querySelectorAll('a[href^="#"]').forEach((anchor) => {
