--- a/faq.html
+++ b/faq.html
@@ -1173,7 +1173,7 @@
     <!-- Navigation -->
     <nav class="navbar" id="navbar">
       <div class="nav-container">
-        <a href="#home" class="logo">
+        <a href="index.html" class="logo">
           <img
             src="assets/images/logo2.png"
             alt="Impasto logo"
@@ -1182,7 +1182,7 @@
         </a>
         <ul class="nav-menu" id="navMenu">
           <li class="nav-item">
-            <a href="#home" class="nav-link" onclick="setActiveNav(this)"
+            <a href="index.html" class="nav-link" onclick="setActiveNav(this)"
               >Home</a
             >
           </li>
@@ -1273,6 +1273,7 @@
         </div>
       </div>
     </nav>
+
     <!-- Hero Section with 5 Images and Dot Navigation -->
     <section id="home" class="hero">
       <div class="hero-slider">
@@ -2152,7 +2153,7 @@
             <h3 class="text-animate">Quick Links</h3>
             <ul class="footer-links">
               <li class="text-animate">
-                <a href="#home">
+                <a href="index.html">
                   <i class="fas fa-chevron-right"></i>
                   Home
                 </a>
@@ -2319,6 +2320,7 @@
       </div>
     </footer>
 
+    <script src="assets/src/general.js"></script>
     <script>
       // ===========================================
       // GLOBAL VARIABLES AND CONSTANTS
