--- a/reviews.html
+++ b/reviews.html
@@ -1000,7 +1000,7 @@
     <!-- Navigation -->
     <nav class="navbar" id="navbar">
       <div class="nav-container">
-        <a href="#home" class="logo">
+        <a href="index.html" class="logo">
           <img
             src="assets/images/logo2.png"
             alt="Impasto logo"
@@ -1009,7 +1009,7 @@
         </a>
         <ul class="nav-menu" id="navMenu">
           <li class="nav-item">
-            <a href="#home" class="nav-link" onclick="setActiveNav(this)"
+            <a href="index.html" class="nav-link" onclick="setActiveNav(this)"
               >Home</a
             >
           </li>
@@ -1806,6 +1806,8 @@
         </div>
       </div>
     </footer>
+
+    <script src="assets/src/general.js"></script>
     <script>
       // ===========================================
       // GLOBAL VARIABLES AND CONSTANTS
