--- a/client-questionnaire.html
+++ b/client-questionnaire.html
@@ -1065,7 +1065,7 @@
     <!-- Navigation -->
     <nav class="navbar" id="navbar">
       <div class="nav-container">
-        <a href="#home" class="logo">
+        <a href="index.html" class="logo">
           <img
             src="assets/images/logo2.png"
             alt="Impasto logo"
@@ -1074,7 +1074,7 @@
         </a>
         <ul class="nav-menu" id="navMenu">
           <li class="nav-item">
-            <a href="#home" class="nav-link" onclick="setActiveNav(this)"
+            <a href="index.html" class="nav-link" onclick="setActiveNav(this)"
               >Home</a
             >
           </li>
@@ -1802,7 +1802,7 @@
             <h3 class="text-animate">Quick Links</h3>
             <ul class="footer-links">
               <li class="text-animate">
-                <a href="#home">
+                <a href="index.html">
                   <i class="fas fa-chevron-right"></i>
                   Home
                 </a>
@@ -1969,6 +1969,7 @@
       </div>
     </footer>
 
+    <script src="assets/src/general.js"></script>
     <script>
       // ===========================================
       // GLOBAL VARIABLES AND CONSTANTS
