--- a/contact.html
+++ b/contact.html
@@ -2005,6 +2005,7 @@
       </div>
     </footer>
 
+    <script src="assets/src/general.js"></script>
     <script>
       // ===========================================
       // GLOBAL VARIABLES AND CONSTANTS
