--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <!-- Navigation -->
     <nav class="navbar" id="navbar">
       <div class="nav-container">
-        <a href="#home" class="logo">
+        <a href="index.html" class="logo">
           <img
             src="assets/images/logo2.png"
             alt="Impasto logo"
@@ -96,7 +96,10 @@
         </a>
         <ul class="nav-menu" id="navMenu">
           <li class="nav-item">
-            <a href="#home" class="nav-link active" onclick="setActiveNav(this)"
+            <a
+              href="index.html"
+              class="nav-link active"
+              onclick="setActiveNav(this)"
               >Home</a
             >
           </li>
@@ -324,7 +327,7 @@
             <h3>Quick Links</h3>
             <ul class="footer-links">
               <li>
-                <a href="#home">
+                <a href="index.html">
                   <i class="fas fa-chevron-right"></i>
                   Home
                 </a>
