--- a/portrait.html
+++ b/portrait.html
@@ -420,7 +420,7 @@
         display: inline-flex;
         align-items: center;
         gap: var(--spacing-sm);
-        padding: var(--spacing-md) var(--spacing-xl);
+        padding: var(--spacing-sm) var(--spacing-md);
         border-radius: var(--radius-lg);
         text-decoration: none;
         font-weight: 600;
@@ -907,25 +907,22 @@
       }
       .cta .btn {
         background: white;
-        color: var(--accent-color);
-        padding: var(--spacing-md) var(--spacing-2xl);
-        font-size: 1.1rem;
-        font-weight: 600;
-        border: none;
-        border-radius: 50px;
-        text-decoration: none;
-        display: inline-flex;
-        align-items: center;
-        gap: var(--spacing-sm);
-        transition: all var(--transition-normal);
-        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-        font-family: var(--font-primary);
+        color: #131313ff;
+        border-radius: 100px;
       }
       .cta .btn:hover {
+        transform: translateY(-5px);
+      }
+
+      /* .cta .btn:hover {
         background: var(--bg-primary);
         transform: translateY(-3px) scale(1.05);
         box-shadow: 0 8px 25px rgba(0, 0, 0, 0.3);
         color: var(--text-primary);
+      } */
+
+      .c-btn i {
+        font-size: 1.2rem;
       }
       .cta .btn i {
         font-size: 1rem;
@@ -1336,7 +1333,7 @@
     <!-- Navigation -->
     <nav class="navbar" id="navbar">
       <div class="nav-container">
-        <a href="#home" class="logo">
+        <a href="index.html" class="logo">
           <img
             src="assets/images/logo2.png"
             alt="Impasto logo"
@@ -1345,7 +1342,7 @@
         </a>
         <ul class="nav-menu" id="navMenu">
           <li class="nav-item">
-            <a href="#home" class="nav-link" onclick="setActiveNav(this)"
+            <a href="index.html" class="nav-link" onclick="setActiveNav(this)"
               >Home</a
             >
           </li>
@@ -1773,7 +1770,7 @@
             Let's work together to capture your most precious moments and create
             lasting memories that tell your unique story
           </p>
-          <a href="/pages/contact.html" class="btn">
+          <a href="contact.html" class="btn">
             <i class="fas fa-calendar-alt"></i>
             Book Your Session
           </a>
@@ -1805,7 +1802,7 @@
             <h3>Quick Links</h3>
             <ul class="footer-links">
               <li>
-                <a href="#home">
+                <a href="index.html">
                   <i class="fas fa-chevron-right"></i>
                   Home
                 </a>
@@ -1956,6 +1953,8 @@
         </div>
       </div>
     </div>
+
+    <!-- <script src="assets/src/general.js"></script> -->
     <script>
       // ===========================================
       // GLOBAL VARIABLES
