--- a/ratecards.html
+++ b/ratecards.html
@@ -1327,7 +1327,7 @@
     <!-- Navigation -->
     <nav class="navbar" id="navbar">
       <div class="nav-container">
-        <a href="#home" class="logo">
+        <a href="index.html" class="logo">
           <img
             src="assets/images/logo2.png"
             alt="Impasto logo"
@@ -1336,7 +1336,7 @@
         </a>
         <ul class="nav-menu" id="navMenu">
           <li class="nav-item">
-            <a href="#home" class="nav-link" onclick="setActiveNav(this)"
+            <a href="index.html" class="nav-link" onclick="setActiveNav(this)"
               >Home</a
             >
           </li>
@@ -1738,7 +1738,7 @@
             <h3 class="text-animate">Quick Links</h3>
             <ul class="footer-links">
               <li class="text-animate">
-                <a href="#home">
+                <a href="index.html">
                   <i class="fas fa-chevron-right"></i>
                   Home
                 </a>
@@ -1899,6 +1899,7 @@
       </div>
     </footer>
 
+    <script src="assets/src/general.js"></script>
     <script>
       // ===========================================
       // GLOBAL VARIABLES AND CONSTANTS
